user-svc/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-svc-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user-svc
  template:
    metadata:
      labels:
        app: user-svc
    spec:
      containers:
      - name: user-svc
        image: user-svc:latest
        ports:
        - containerPort: 3000
