user-svc/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  selector:
    app: user-svc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
