user-svc/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-svc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: user-svc.kblog.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 3000
